--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    
+    <header>
+        <h1>Elon Musk</h1>
+        <q>When something is important enough, you do it even if the odds are not in your favor.</q>
+    </header>
 </body>
 </html>
