Add Elon image and set graidient

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <header>
-        <h1>Elon Musk</h1>
-        <q>When something is important enough, you do it even if the odds are not in your favor.</q>
-    </header>
+    <div id="intro">
+        <header>
+            <h1>Elon Musk</h1>
+            <q>When something is important enough, you do it even if the odds are not in your favor.</q>
+        </header>
+
+        <img src="./img/elon-musk.png" alt="">
+    </div>
 </body>
 </html>
