--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tribute Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald:500|Source+Sans+Pro" rel="stylesheet">
 </head>
 <body>
     <div id="intro">
@@ -13,7 +14,6 @@
             <h1>Elon Musk</h1>
             <q>When something is important enough, you do it even if the odds are not in your favor.</q>
         </header>
-
         <img src="./img/elon-musk.png" alt="">
     </div>
 </body>
